--- a/MVC5Practice/Views/Shared/_Layout.cshtml
+++ b/MVC5Practice/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
                     <li>@Html.ActionLink("產品管理", "Index", "Products")</li>
+                    <li>@Html.ActionLink("客戶管理", "Index", "Clients")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
