--- a/MVC5Practice/Views/Products/Create.cshtml
+++ b/MVC5Practice/Views/Products/Create.cshtml
@@ -2,12 +2,13 @@
 
 @{
     ViewBag.Title = "Create";
+    Layout = "";
 }
 
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Clients"))
 {
     @Html.AntiForgeryToken()
     
