18 練習透過 Entity Framework 更新資料與批次更新多筆資料

--- a/MVC5Practice/Views/EF/Index.cshtml
+++ b/MVC5Practice/Views/EF/Index.cshtml
@@ -7,12 +7,13 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create")<br />
+    @Html.ActionLink("Add price 20%", "Add20Percent")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ProductName)
+            @Html.DisplayNameFor(model => model.ProductName)            
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Price)
@@ -30,6 +31,7 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.ProductName)
+            @Html.ActionLink("加上驚嘆號", "Update", new { id = item.ProductId })
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Price)
