50 練習使用 Html.Partial 與 Html.Action 方法載入其他頁面

--- a/MVC5Practice/Views/Clients/Details.cshtml
+++ b/MVC5Practice/Views/Clients/Details.cshtml
@@ -60,6 +60,15 @@
 
     </dl>
 </div>
+@* /Orders/Index?ClientId=1 *@
+
+<h3>Html.Action</h3>
+
+@Html.Action("Index", "Orders", new { ClientId = Model.ClientId })
+
+<h3>Html.Partial</h3>
+
+@Html.Partial("../Orders/Index", Model.Order.ToList())
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ClientId }) |
     @Html.ActionLink("Back to List", "Index")
