將 Html.Partial 改用 ClientOrders 檢視頁面

--- a/MVC5Practice/Views/Clients/Details.cshtml
+++ b/MVC5Practice/Views/Clients/Details.cshtml
@@ -68,7 +68,7 @@
 
 <h3>Html.Partial</h3>
 
-@Html.Partial("../Orders/Index", Model.Order.ToList())
+@Html.Partial("ClientOrders", Model.Order.ToList())
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ClientId }) |
     @Html.ActionLink("Back to List", "Index")
