52 練習使用 Html.DropDownList 顯示下拉選單

--- a/MVC5Practice/Views/Clients/Index.cshtml
+++ b/MVC5Practice/Views/Clients/Index.cshtml
@@ -10,7 +10,9 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <form action="">
-    <input type="search" name="search" value="" />
+    @Html.TextBox("search")
+    @Html.DropDownList("CreditRating","--請選擇評價--")
+    @Html.DropDownList("Gender","--請選擇性別--")
     <input type="submit" value="搜尋" />
 </form>
 <table class="table">
