57 練習 @Ajax.ActionLink 的使用方式

--- a/MVC5Practice/Views/Home/Index.cshtml
+++ b/MVC5Practice/Views/Home/Index.cshtml
@@ -3,7 +3,10 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1></h1>
+    <button class="btn">取得時間</button>
+    @Ajax.ActionLink("取得時間", "GetTime", new AjaxOptions() { Confirm = "確定要取得現在時間嗎？", UpdateTargetId = "getTime" })
+    <div id="getTime"></div>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
@@ -29,3 +32,7 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+
+@section Scripts {
+<script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+    }
