59 練習 PagedList.Mvc 對 /Products/Index 顯示的資料進行分頁處裡

--- a/MVC5Practice/Views/Products/Index.cshtml
+++ b/MVC5Practice/Views/Products/Index.cshtml
@@ -49,6 +49,11 @@
 }
 
 </table>
+
+@using PagedList
+@using PagedList.Mvc
+@Html.PagedListPager(Model as IPagedList, (p) => Url.Action("Index", new { pageNo = p }))
+
 <div id="details"></div>
 @section Scripts {
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
