61 練習 Ajax.JavaScriptStringEncode 的用法

--- a/MVC5Practice/Views/Products/Index.cshtml
+++ b/MVC5Practice/Views/Products/Index.cshtml
@@ -56,5 +56,14 @@
 
 <div id="details"></div>
 @section Scripts {
-    <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+@{
+    ViewBag.Msg = @"123';
+alert('XSS');//123";
+
+}
+<script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+<script>
+        var str = '@Ajax.JavaScriptStringEncode(ViewBag.Msg)';
+        console.log(str);
+</script>
 }
